--- a/app/views/wheels/show.html.erb
+++ b/app/views/wheels/show.html.erb
@@ -2,6 +2,10 @@
 
 <% @wheel.answers.group_by(&:section).each do |section, answers| %>
 	<%= section.section_name %>
+	<span class="set_goal"> <%= link_to 'set goal', new_goal_path %></span>
 	<%= answers.map(&:answer_value).inspect %><br>
 	section sum = <%= section_sum = answers.map(&:answer_value).sum %><br>
 <% end %>
+
+
+<%= link_to 'save wheel', wheel_path %>
