--- a/app/views/wheels/new.html.erb
+++ b/app/views/wheels/new.html.erb
@@ -1,37 +1,36 @@
-<h1>"Create your wheel"</h1><br>
-<h2>Please select the answer that represents you.</h2><br>
+<h2>To create your personalized life balance wheel please select and answer all the questions below.</h2><br>
  
 
 <%= form_for @wheel do |f| %>
 
-<div id="accordion">
+	<div id="accordion">
 
-	<% Section.all.each do |s| %>
-		<h3><%= s.section_name %></h3>
-		
-		<div>
-			<% s.questions.each do |q| %>
-		  	<div class='question'>
-		 		<h4><%= q.question %></h4>
-		 		<% q.answers.each do |a| %>
-			 		<div class="answer_radio"><label>
-			 			<div><%= a.answer_text %></div>
-			 			<%= radio_button_tag "answer[#{q.id}]", a.id %>
-			 		</label></div>
+		<% Section.all.each do |s| %>
+			<h3><%= s.section_name %></h3>
+			
+			<div>
+				<% s.questions.each do |q| %>
+			  	<div class='question'>
+			 		<h4><%= q.question %></h4>
+			 		<% q.answers.each do |a| %>
+				 		<div class="answer_radio"><label>
+				 			<div><%= a.answer_text %></div>
+				 			<%= radio_button_tag "answer[#{q.id}]", a.id %>
+				 		</label></div>
+			 		<% end %>
+			 	 </div>
 		 		<% end %>
-		 	 </div>
-	 		<% end %>
-	 	</div>
-	<% end %>
-</div>
- 
- <div class='wheel_submit_button'>
-  	<%= f.button "Create Wheel" %>
- </div>
+		 	</div>
+		<% end %>
+	</div>
+	 
+	 <div class='wheel_submit_button' >
+	  	<%= f.button "Create My Wheel" %>
+	 </div>
 
 
-<% if flash[:error] -%>
-      <%= flash[:error] %>
-<% end -%>
+	<% if flash[:error] -%>
+	      <%= flash[:error] %>
+	<% end -%>
 
 <% end %>
