--- a/app/views/layouts/questionnaire.html.erb
+++ b/app/views/layouts/questionnaire.html.erb
@@ -22,12 +22,13 @@
 	<div id="container">
 
 		<!-- BEGIN: Header -->
-    	<div id="logo">
-    		Logo goes here
-    	</div>
+    <div id="logoback" class="shadow">
+        <div id="logo">
+          <a href=""><img src="/assets/360-Logo.png" width="120" height="120"/></a>
+      </div>
+    </div>
 
       <div id="navheader">
-
         <%= yield :nav_header %>
       </div>
 
