--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,8 +1,13 @@
 html { 
-        height: 100%; 
-        width: 100%; 
+    height: 100%; 
+    width: 100%; 
     }
 body {
+    background: url("/assets/Background.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     margin: 0px;
     font-family: Helvetica Neue, Arial, sans-serif;
     font-size: 14px;
@@ -12,37 +17,39 @@ body {
 br {
     clear: both;
 }
-
-.right {
-    float:right;
+div {
+    display: block;
 }
-
-.left {
-    float: left;
+.shadow {
+-moz-box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
+-webkit-box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
+box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
 }
-
-.clear {
-    clear: both;
-}
-
 #container {
     margin: 0 auto;
     width: 1050px;
     text-align:left;
+    padding-left: 55px;
 } 
-
-#logo {
-    padding-top: 20px;
-    padding-bottom: 18px;
+#logoback {
+    padding-top: 12px;
+    background-color: #ff7700;
+    border-radius: 30px 30px 30px 30px;
+    margin: 20px 0 20px 0;
 }
-
+#logo {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+/* Nav-bar */
 #navheader {
     height: 45px;
-    width: 1050px;
+    margin-top: 45px;
     padding-top: 12px;
-    background-color: rgb(144, 199, 65);
-/*    border-radius: 30px 30px 30px 30px;
-*/}
+    background-color: rgb(22,129,204);
+    border-radius: 30px 30px 30px 30px;
+}
 #navmission {
     padding-left:30px;
     float: left;
@@ -55,32 +62,94 @@ br {
     padding-left:20px;
     float: left;
 }
-
 #navinspired2 {
     padding-left:20px;
     float: left;
 }
-
 #navstore {
     padding-left:35px;
     float: left;
 }
+/* Main */
 #main {
+    border-radius: 30px 30px 30px 30px;
+    background-color: rgba(255, 255, 255, 0.55);
     height: 378px;
-    width: 1050px;
-    padding-top: 12px;
-    background-color: green;
-/*    border-radius: 30px 30px 30px 30px;
-*/    font-family: Helvetica Neue, Arial, sans-serif;
+    padding: 42px 48px 42px 48px;
+    font-family: Helvetica Neue, Arial, sans-serif;
     font-size: 14px;
     line-height: 16px;
-    margin-top: 20px;
+    margin: 20px 0 30px 0;
 }
+#content_left {
+    float: left;
+    margin-right: 7px;
+    display: inline-block;
+    width: 560px;
+}
+#content_right {
+    float: right;
+    margin-left: 7px;
+    display: inline-block;
+    width: 380px;
+}
+.clear {
+    clear: both;
+}
+/* Static Homepage */
+#home_titletext {
+    font: 24px Arial, Helvetica, sans-serif;
+    line-height: 28px;
+    font-weight: bold;
+    color: #767f84;
+    margin-bottom: 20px;
+    }
+#home_othertext1 {
+    font: 20px Arial, Helvetica, sans-serif;
+    line-height: 20px;
+    color: #767f84;
+    margin-bottom: 20px;
+}
+#home_othertext2 {
+    font: 18px Arial, Helvetica, sans-serif;
+    line-height: 20px;
+    color: #767f84;
+}
+/* Home Button */
+.homeButton {
+    -moz-box-shadow: 0px 10px 14px -7px #276873;
+    -webkit-box-shadow: 0px 10px 14px -7px #276873;
+    box-shadow: 0px 10px 14px -7px #276873;
+    
+    background-color:transparent;
+    
+    -moz-border-radius:8px;
+    -webkit-border-radius:8px;
+    border-radius:8px;
+    
+    display:inline-block;
+    color:#ffffff;
+    font-family:arial;
+    font-size:24px;
+    font-weight:bold;
+    padding: 40px 120px;
+    margin: 20px 0 0 320px;
+    text-decoration:none;
+    
+    text-shadow:0px 1px 0px #3d768a;
+}
+.homeButton:hover {
+    background-color:transparent;
+}
+.homeButton:active {
+    position:relative;
+    top:1px;
+}
+/* Form */
 .question{
     font-size: 14px;
     display: inline-block;
 }
-
 .question h4 {
     font-weight: bold;
 }
@@ -97,14 +166,14 @@ br {
     width: 150px;
     height: 35px;
 }
+/* Footer */
 #footer{
     height: 45px;
-    width: 1050px;
-    margin-top: 40px;
     padding-top: 12px;
-    background-color: green;
-/*    border-radius: 30px 30px 30px 30px;
-*/}
+    background-color: #aed32a;
+    border-radius: 30px 30px 30px 30px;
+    margin-bottom: 45px;
+}
 #footer #inside_nav {
     padding-top: 10px;
     padding-bottom: 15px;
@@ -124,14 +193,9 @@ br {
     float:left;
     padding-right:4px;
 }
-
 #footer #inside_nav a {
     color:#898989;
     text-decoration:none;
-}
-
-#lady {
-    position:relative;
 }
 #mainBuild {
     position:relative;
@@ -140,7 +204,6 @@ br {
     border-right: 1px solid #e8e8e8;
     border-bottom: none #e8e8e8;
     border-left: 1px solid #e8e8e8;
-    /*background: url("../images/buildback.png") repeat-x;*/
 }
 #mainInspire {
     position:relative;
@@ -152,61 +215,34 @@ br {
     background: url("../images/inspired/inspiredback.jpg") repeat-x;
 }
 #mainnav {
-}
-
+}twitter border form div-1
 #mainnav .button{
     float: left;
-}
-
-#itembox {
-    padding-left:42px;
-    width: 540px;
-}
-#itembox #titletext {
-    font: 15px Arial, Helvetica, sans-serif;
-    line-height: 24px;
-    font-weight: bold;
-    color: #767f84;
-    padding-top: 5px;
-    padding-bottom: 28px;
-    }
-#itembox #text {
-    font: 14px Arial, Helvetica, sans-serif;
-    line-height: 20px;
-    color: #767f84;
-    padding-top:25px;
-    padding-bottom: 28px;
 }
 #bottom-color {
     padding-top: 30px;
     padding-bottom: 28px;
 }
-
 #div-1 {
     position:relative;
     width: 928px;
 }
-
 .button_size {
     padding-top: 20px;
     padding-left: 65px;
 }
-
 .button2_size {
     padding-top: 20px;
     padding-left: 77px;
 }
-
 .button3_size {
     padding-top: 20px;
     padding-left: 84px;
 }
-
 .button4_size {
     padding-top: 20px;
     padding-left: 64px;
 }
-
 .button_1 {
     float:left;
     height: 50px;
@@ -214,7 +250,6 @@ br {
     background: url("../images/button_left_side.jpg") no-repeat;
     cursor: pointer;
 }
-
 .button_2 {
     float:left;
     height: 50px;
@@ -222,7 +257,6 @@ br {
     background: url("../images/button_left_gradient.jpg") no-repeat;
     cursor: pointer;
 }
-
 .button_3 {
     float:left;
     height: 50px;
@@ -230,7 +264,6 @@ br {
     background: url("../images/button_left_gradient.jpg") no-repeat;
     cursor: pointer;
 }
-
 .button_4 {
     float:left;
     height: 50px;
@@ -238,7 +271,6 @@ br {
     background: url("../images/button_right_side_gradient.jpg") no-repeat;
     cursor: pointer;
 }
-
 #button1_position {
     position:absolute;
     overflow:hidden;
@@ -248,7 +280,6 @@ br {
     top: -257px;
     display:none;
 }
-
 #button2_position {
     position:absolute;
     overflow:hidden;
@@ -258,7 +289,6 @@ br {
     top: -257px;
     display:none;
 }
-
 #button3_position {
     position:absolute;
     overflow:hidden;
@@ -275,72 +305,6 @@ br {
     left: 666px;
     top: -257px;
 }
-
-#button1_popup {  
-    width: 270px;
-    position: relative;
-    top: 257px;
-    height: 258px;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 10;
-    overflow: hidden;
-    text-align: left;
-    background: url("../images/popupleftback.png") no-repeat;;
-    -moz-opacity: .9;
-    KhtmlOpacity: .9;
-    opacity: .9;
-} 
-
-#button2_popup {
-    width: 302px;
-    position: relative;
-    top: 257px;
-    height: 258px;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 10;
-    overflow: hidden;
-    text-align: left;
-    background: url("../images/popupback.png") no-repeat;;
-    -moz-opacity: .9;
-    KhtmlOpacity: .9;
-    opacity: .9;
-}  
-
-
-#button3_popup {
-    width: 302px;
-    position: relative;
-    top: 257px;
-    height: 258px;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 10;
-    overflow: hidden;
-    text-align: left;
-    background: url("../images/popupback.png") no-repeat;;
-    -moz-opacity: .9;
-    KhtmlOpacity: .9;
-    opacity: .9;
-} 
-
-#button4_popup {
-    width: 270px;
-    position: relative;
-    top: 257px;
-    height: 258px;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 10;
-    overflow: hidden;
-    text-align: left;
-    background: url("../images/popuprightback.png") no-repeat;
-    -moz-opacity: .9;
-    KhtmlOpacity: .9;
-    opacity: .9;
-} 
-
 #backgray  {
     background-color:#000000;
     height: 448px;
@@ -358,321 +322,5 @@ br {
     KhtmlOpacity: .8;
     opacity: .8;
     margin-bottom: 33px;
-
     position:relative;
 }  
-
-#smallloginText{
-    font: 11px Arial, Helvetica, sans-serif;
-    color: #FFFFFF;
-    -moz-opacity: 1;
-    KhtmlOpacity: 1;
-    opacity: 1;
-    visibility:visible;
-    left: 0px;
-
-    top: 0px;
-    margin-left: 25px;
-}
-
-#loginText{
-    z-index: 26;
-    font: 14px Arial, Helvetica, sans-serif;
-    color: #FFFFFF;
-    -moz-opacity: 1;
-    KhtmlOpacity: 1;
-    opacity: 1;
-    visibility:visible;
-    left: 0px;
-    width: 951px;
-    height: 428px;
-    top: 0px;
-    padding-top:97px;
-}
-
-#loginText .emailBox{
-    float: left;
-    font: 15px Arial, Helvetica, sans-serif;
-    color: #FFFFFF;
-    width: 367px;
-    padding-top: 25px;
-}
-
-#loginText .formBox{
-    float: right;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #FFFFFF;
-    width: 417px;
-    padding-top: 25px;
-
-}
-
-
-#loginText .formBox label{
-    float:right;
-    padding-right: 12px;
-}
-
-#loginText  .formBox input{
-    float:right;
-    width: 239px;
-    height: 18px;
-    border: 0px;
-    margin-left: 5px;
-    background: #FFFFFF;
-    margin-bottom: 5px;
-}
-#loginText .loginBox {
-
-    padding-left:72px;
-    clear: both;
-    width: 813px;
-}
-
-#loginText .loginBox img{
-    vertical-align:middle;
-}
-#loginText .bottomloginBox {
-    padding-top: 20px;
-    padding-left:72px;
-    clear: both;
-    width: 813px;
-}
-
-#loginText .bottomloginBox img{
-    vertical-align:middle;
-}
-#loginText .loginText {
-
-    -moz-opacity: 1.0;
-    KhtmlOpacity: 1.0;
-    opacity: 1.0;
-}
-
-.boxheader{
-    margin: 0px;
-    padding: 0px;
-    width: 952px;
-    height: 11px;
-    overflow:hidden;
-    position:relative;
-}
-
-.boxfooter{
-    margin: 0px;
-    padding: 0px;
-    width: 952px;
-    height: 10px;
-    overflow:hidden;
-    background: url("../images/backfooter.jpg") no-repeat top;
-}
-
-.mainbox {
-    width: 950px;
-    background: #fbfbfb url("../images/backbottom.jpg") no-repeat bottom;
-    border-right: 1px solid #eaeced;
-    border-left: 1px solid #eaeced;
-    position:relative;
-    padding-bottom: 28px;
-    overflow:hidden;
-}
-
-
-.error-box {
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #76BEE9;
-    padding: 5px;
-    margin: 10px;
-    font-weight: bold;
-}
-
-#message_success {
-    font: 25px Arial, Helvetica, sans-serif;
-    color: #f9a51a;
-    margin-bottom: 10px;
-}
-
-#message_error {
-    color: #FF0000;
-    margin-bottom: 10px;
-}
-
-.sIFR-hasFlash .inspireText {
-
-    visibility: hidden;
-    font-family: Verdana;
-
-}
-
-.shareHeader{
-    font-size:23px;
-    margin-bottom: 10px;
-}
-
-.sIFR-hasFlash .shareHeader {
-
-    visibility: hidden;
-    font-family: Verdana;
-
-}
-
-.smalltext {
-    padding-top: 3px;
-    padding-left: 3px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-    float:left;
-}
-
-.smalltext a{
-    padding-top: 3px;
-    padding-left: 3px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-    float:left;
-    text-decoration: none;
-}
-
-.smalltext_nofloat {
-    padding-top: 3px;
-    padding-left: 3px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-}
-
-.smalltext_nofloat a{
-    padding-top: 3px;
-    padding-left: 3px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-    text-decoration: none;
-}
-
-#inspireRightText{
-    margin-top: 53px;
-    font: bold 13px Arial, Helvetica, sans-serif;
-    color: #5C6F7B;
-}
-
-#inspireRightText a{
-    font: bold 13px Arial, Helvetica, sans-serif;
-    color: #5C6F7B;
-    text-decoration:none;
-}
-
-#inspireRightText li{
-    line-height: 35px;
-    text-indent: 25px;
-}
-
-#inspireRightText li.selected{
-    padding-top: 6px;
-    height: 27px;
-    font: bold 13px Arial, Helvetica, sans-serif;
-    color: #E98D1D;
-    background: url("../images/button.png") no-repeat left center;
-}
-#inspireRightText li.selected a{
-    font: bold 13px Arial, Helvetica, sans-serif;
-    color: #E98D1D;
-    text-decoration: none;
-}
-#topHeader {
-    padding-bottom: 0px;
-    width: 576px;
-    clear: both;
-}
-.sIFR-hasFlash .smallHeader {
-    visibility: hidden;
-    font-family: Verdana;
-}
-.smallHeader{
-    font-size:20px;
-    margin-bottom: 10px;
-}
-#liveright {
-    width: 240px;
-    font: normal 13px Arial, Helvetica, sans-serif;
-    color: #767F84;
-    padding-bottom: 10px;
-    float: right;
-    margin-right: 85px;
-
-}
-.hide_div {
-    display: none;
-}
-.bullets {
-    list-style:disc;
-    margin-left: 25px;
-}
-
-.shareEmail input{
-    width: 339px;
-    height: 18px;
-    border: 1px solid #e1e1e1;
-    background: #FFFFFF;
-    margin-bottom: 5px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-}
-
-.shareEmail textarea{
-    width: 339px;
-    height: 80px;
-    border: 1px solid #e1e1e1;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-}
-
-.orange{
-    font: 13px Arial, Helvetica, sans-serif;
-    color: #e98d1d;
-    text-decoration: none;
-}
-
-.methodHeader {
-    padding-bottom: 12px;
-    padding-top: 5px;
-    margin-top: 20px;
-    border-top: 1px solid #e1e1e1;
-
-}
-
-.social img{
-    padding-right: 12px;
-}
-
-.rightsocial {
-    text-align: left;
-    width: 540px;
-    float: right;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-    padding-right: 30px;
-}
-
-.leftsocial {
-    padding-top: 3px;
-    padding-left: 3px;
-    width: 300px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-    float:left;
-}
-
-.shareBadge textarea{
-    width: 309px;
-    height: 80px;
-    border: 1px solid #e1e1e1;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #8A9297;
-}
-
-
-.answer_radio {
-    font-size: 14px;
-    display: inline-block;
-    text-align: center;
-    padding: 20px 40px 50px 0px;
-}
