--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 	<meta content="text/javascript" http-equiv="Content-Script-Type">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag "jquery-ui.css" %>
+  <%= javascript_include_tag "http://d3js.org/d3.v3.min.js" %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "jquery-1.9.1.js" %>
   <%= javascript_include_tag "jquery-ui.js" %>
