wheel form fixed

--- a/app/views/wheels/new.html.erb
+++ b/app/views/wheels/new.html.erb
@@ -1,5 +1,7 @@
 <h3>To create your personalized life balance wheel please select and answer all the questions below.</h3><br>
- 
+<% if Rails.env.development? %>
+	<button class='random'>Random answers</button>
+<% end %>
 
 <%= form_for @wheel do |f| %>
 
