--- a/app/views/wheels/show.html.erb
+++ b/app/views/wheels/show.html.erb
@@ -2,7 +2,7 @@
 
 <% @wheel.answers.group_by(&:section).each do |section, answers| %>
 	<%= section.section_name %><br>
-	<span class="set_goal"> <%= link_to 'set goal', new_goal_path %></span>
+	<span class="set_goal"> <%= link_to 'set goal', new_section_goal_path(section) %></span>
 	<%= answers.map(&:answer_value).inspect %><br>
 	<% section_sum = answers.map(&:answer_value).sum %><br>
 	<% section_percent = section_sum /0.2 %><br>
