--- a/app/views/layouts/questionnaire.html.erb
+++ b/app/views/layouts/questionnaire.html.erb
@@ -29,7 +29,7 @@
     </div -->
 
     <!-- BEGIN: Navbar -->
-      <div id="navigation-bar" class="shadow">
+      <div id="navigation-bar">
         <ul class="nav">
            <li><a href="/">Home</a></li>
            <li><a href="#">Link 1</a></li>
