--- a/app/views/static/homepage.html.erb
+++ b/app/views/static/homepage.html.erb
@@ -1,5 +1,7 @@
-
-
+<!-- <div class='logo'>
+	<%= image_tag '360-Logo.png' %>
+</div> -->
+<div class='homepage_text'>
 	<div id="home_titletext"> 
 		Are you feeling stressed and overwhelmed in some areas of your life while severely lacking in others? Do you have a hard time separating your professional from your personal life? Not experiencing enough relaxation, fun or recreation? 
    	</div>
@@ -15,3 +17,4 @@
 	<div>
 		<a href="wheels/new" class="homeButton">I'm Ready!</a>
 	</div>
+</div>
