--- a/app/views/wheels/show.html.erb
+++ b/app/views/wheels/show.html.erb
@@ -9,5 +9,8 @@
 	section percent is  <%= section_percent.to_i %>
 <% end %>
 
-<%= javascript_include_tag 'z-sanburst-d3' %>
+<div id="sunburst">
+	<div class="wheel_back"></div>
+</div>
 <%= link_to 'save wheel', wheel_path %>
+<%= javascript_include_tag 'z-sanburst-d3' %>
