--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <%= javascript_include_tag "jquery-1.9.1.js" %>
   <%= javascript_include_tag "jquery-ui.js" %>
   <%= csrf_meta_tags %>
+  <%= javascript_include_tag :defaults %>
 </head>
 
 <body class="<%= @page %>">
