--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -20,6 +20,16 @@ br {
 div {
     display: block;
 }
+h2 {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+h3 {
+    padding: 0 0 15px 36px;
+    font-family: Helvetica Neue, Arial, sans-serif;
+    font-size: 20px;
+}
 .shadow {
 -moz-box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
 -webkit-box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
@@ -31,12 +41,7 @@ box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
     text-align:left;
     padding-left: 55px;
 } 
-/*#logoback {
-    padding-top: 12px;
-    background-color: #ff7700;
-    border-radius: 20px 20px 20px 20px;
-    margin: 20px 0 15px 0;
-}*/
+/* Logo */
 #logo {
     float: left;
 }
@@ -74,11 +79,6 @@ box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
     margin-left: 7px;
     display: inline-block;
     width: 380px;
-}
-h3 {
-    padding: 0 0 15px 36px;
-    font-family: Helvetica Neue, Arial, sans-serif;
-    font-size: 20px;
 }
 .clear {
     clear: both;
