--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,7 @@
   <%= stylesheet_link_tag "jquery-ui.css" %>
   <%= javascript_include_tag "http://d3js.org/d3.v3.min.js" %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "jquery-1.9.1.js" %>
-  <%= javascript_include_tag "jquery-ui.js" %>
   <%= csrf_meta_tags %>
-  <%= javascript_include_tag :defaults %>
 </head>
 
 <body class="<%= @page %>">
@@ -51,6 +48,8 @@
 
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
+
+        <%= render 'layouts/modal' %>
 
         <%= yield %>
 
