--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
 <body class="<%= @page %>">
 <!-- BEGIN: Main Page -->
 	<div id="container">
-
+  <div id="secondaryContent">
+      <%= render 'common/session' %>
+    </div>
 		  <!-- BEGIN: Header -->
 <!--       <div id="logoback" class="shadow">
         <div id="logo">
