--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -60,7 +60,7 @@ box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
     opacity: 0.85;
     padding-bottom: 100px;
 }
-./*wheel_back {
+/*wheel_back {
 left: -64px;
 top: -15px;
 width: 710px;
@@ -69,27 +69,7 @@ background-image: url('/assets/Wheel-Final.png');
 position: absolute;
 z-index: -1;
 }*/
-/*#logoback {
-    padding-top: 12px;
-    background-color: #ff7700;
-    border-radius: 20px 20px 20px 20px;
-    margin: 20px 0 15px 0;
-=======
-    margin-left: 160px;
-    padding-top: 100px;
-    opacity: 0.75;
-    padding-bottom: 100px;
-}
-/*.wheel_back{
-    left: -5px;
-    top: -5px;
-    width: 910px;
-    height: 910px;
-    background-image:url("/assets/wheel_of_life.png");
-    position: absolute;
-    z-index: -1;
->>>>>>> df042865b08fb7c3aa07385ea2ea1f40f4da48c2
-}*/
+
 /* Devise Email */
 #user_email, #user_password, #user_password_confirmation{
 padding: 5px 35px 0 0;
