--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -8,7 +8,9 @@
   background: rgba(0,0,0,0.4);
 }
  
-#modal {
+#modal
+ {
+  z-index: 999;
   display: none;
   position: absolute;
   width: 600px;
