--- a/app/views/wheels/show.html.erb
+++ b/app/views/wheels/show.html.erb
@@ -1,13 +1,15 @@
 "Your personal wheel"
 
-<% @wheel.answers.group_by(&:section).each do |section, answers| %>
-	<%= section.section_name %><br>
-	<span class="set_goal"> <%= link_to 'set goal', new_section_goal_path(section), :remote => true %></span>
-	<%= answers.map(&:answer_value).inspect %><br>
-	<% section_sum = answers.map(&:answer_value).sum %><br>
-	<% section_percent = section_sum /0.2 %><br>
-	section percent is  <%= section_percent.to_i %>
-<% end %>
+<div class='hidden'>
+	<% @wheel.answers.group_by(&:section).each do |section, answers| %>
+		<%= section.section_name %><br>
+		<span class="set_goal"> <%= link_to 'set goal', new_section_goal_path(section), :remote => true, 'data-section-id' => section.id %></span>
+		<%= answers.map(&:answer_value).inspect %><br>
+		<% section_sum = answers.map(&:answer_value).sum %><br>
+		<% section_percent = section_sum /0.2 %><br>
+		section percent is  <%= section_percent.to_i %>
+	<% end %>
+</div>
 
 <div id="sunburst">
 	<div class="wheel_back"></div>
