--- a/app/views/wheels/new.html.erb
+++ b/app/views/wheels/new.html.erb
@@ -1,4 +1,4 @@
-<h3>To create your personalized life balance wheel please select and answer all the questions below.</h3><br>
+<h3>To create your personalized life balance wheel please select and answer the questions below.</h3><br>
 <% if Rails.env.development? %>
 	<button class='random'>Random answers</button>
 <% end %>
