--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       
       <!-- BEGIN: Navbar -->
       <div id='logo'>
-        <%= image_tag '360-Logo.png' %>
+        <%= link_to image_tag('360-Logo.png'), '/' %>
       </div>
       
       <div id="navigation-bar">
