--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -30,6 +30,12 @@ h3 {
     font-family: Helvetica Neue, Arial, sans-serif;
     font-size: 20px;
 }
+.error_format {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    font-size: 16px;
+    color: red;
+    padding-bottom: 15px;
+}
 .shadow {
 -moz-box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
 -webkit-box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
@@ -254,7 +260,7 @@ ul.nav, .nav ul {
     display: block;
     position: relative;
     margin: 0 0 0 0;
-    padding: 22px 65px;
+    padding: 22px 55px;
     /* Typography */
     font-family: 'Yanone Kaffeesatz', Helvetica, Arial, sans-serif;
     color: #d8d8d8;
