--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
       <div id="navigation-bar">
         <ul class="nav">
            <li><a href="/">Home</a></li>
-           <li><a href="#">Link 1</a></li>
-           <li><a href="#">Link 2</a></li>
+           <li><a href="#">Testimonials</a></li>
+           <li><a href="#">Community</a></li>
            <li><a href="/users/sign_up">Sign Up</a></li>
            <li><a href="/users/sign_in">Login</a></li>
         </ul>      
