--- a/app/views/layouts/questionnaire.html.erb
+++ b/app/views/layouts/questionnaire.html.erb
@@ -25,16 +25,11 @@
       <div id="navigation-bar">
         <ul class="nav">
            <li><a href="/">Home</a></li>
-           <li><a href="#">Link 1</a></li>
-           <li><a href="#">Link 2</a></li>
+           <li><a href="/">Testimonials</a></li>
+           <li><a href="#">Community</a></li>
            <li><a href="/users/sign_up">Sign Up</a></li>
            <li><a href="/users/sign_in">Login</a></li>
         </ul>
-
-     <!--  <div id="navheader">
-        <%= yield :nav_header %>
-      </div>
- -->
       
     <% if current_user %>
     logged in as <% current_user.email %>
