--- a/app/views/common/_session.html.erb
+++ b/app/views/common/_session.html.erb
@@ -1,4 +1,4 @@
 <%- if user_signed_in? %>
   <p>Hello <%= current_user.email %><br />
-  <%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></p>
+  <%= link_to 'Sign out', destroy_user_session_path %></p>
 <%- end %>
