Checkbox image  added on top to the questions form

--- a/app/views/wheels/new.html.erb
+++ b/app/views/wheels/new.html.erb
@@ -12,9 +12,9 @@
 	<div id="accordion">
 
 		<% Section.all.each do |s| %>
-			<h3><%= s.section_name %></h3>
+			<h3><%= s.section_name %> <%= image_tag 'check.png', class: 'section-status' %></h3>
 			
-			<div>
+			<div class='question-section'>
 				<% s.questions.each do |q| %>
 			  	<div class='question'>
 			 		<h4><%= q.question %></h4>
