--- a/app/assets/stylesheets/wheels.css.scss
+++ b/app/assets/stylesheets/wheels.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the wheels controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.section-status {
+	display: none;
+	width: 20px;
+	padding-left:710px;
+	text-align:right;
+}
+
+.section-status.done {
+	display: inline-block;
+}
