user session now only can have one wheel, button in goal form fixed

--- a/app/views/wheels/show.html.erb
+++ b/app/views/wheels/show.html.erb
@@ -12,5 +12,5 @@
 <div id="sunburst">
 	<div class="wheel_back"></div>
 </div>
-<%= link_to 'save wheel', wheel_path %>
+<%= link_to 'save wheel', new_user_registration_path, :class => "homeButton" %>
 <%= javascript_include_tag 'z-sanburst-d3' %>
