--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -58,6 +58,7 @@ box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
     padding-top: 100px;
     opacity: 0.85;
     padding-top: 68px;
+    margin-bottom: 200px;
 }
 .wheel_back {
 width: 100%;
