--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <% @goals.each do |goal| %>
   <tr>
     <td>-Title:<%= goal.title %></td>
@@ -9,4 +7,6 @@
     <td><%= link_to 'Destroy', [goal.section, goal], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
+
+<%= link_to 'show wheel', wheel_path(current_user), :class => "homeButton" %>
 
