Question form check-image aligned to the right and activated random answers

--- a/app/assets/stylesheets/wheels.css.scss
+++ b/app/assets/stylesheets/wheels.css.scss
@@ -5,8 +5,8 @@
 .section-status {
 	display: none;
 	width: 20px;
-	padding-left:710px;
-	text-align:right;
+	position: absolute;
+	right: 30px;
 }
 
 .section-status.done {
