--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -9,7 +9,7 @@
   <%= f.label(:due_date) %><br>
   <%= f.date_field(:due_date) %><br>
   <%= f.label :priority %><br>
-  <%= f.select(:priority, [['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5]]) %><br>
+  <%= f.select(:priority, [['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5]], include_blank: true) %><br>
   <%= f.label :completion %><br>
   <%= f.check_box :completion %><br>
   <%= f.submit %>
