added help text to wheel page

--- a/app/views/wheels/new.html.erb
+++ b/app/views/wheels/new.html.erb
@@ -1,4 +1,11 @@
-<h3>To create your personalized life balance wheel please select and answer the questions below.</h3><br>
+<br>
+<div id="home_text">
+	<div id="quiz_text"> 
+	To create your personalized life balance wheel please select and answer all questions below. 
+	</div>
+</div>
+
+<br>
 <% if Rails.env.development? %>
 	<button class='random'>Random answers</button>
 <% end %>
