styled form and removed button

--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -7,7 +7,17 @@
   left: 0;
   background: rgba(0,0,0,0.4);
 }
+
+#modal input {
+  
+padding: 5px 70px 0 0;
+margin-bottom: 10px;
+margin-top: 1px;
+font-size: 12px;
+}
  
+
+
 #modal
  {
   z-index: 999;
