--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -8,5 +8,5 @@
   </tr>
 <% end %>
 
-<%= link_to 'show wheel', wheel_path(current_user), :class => "homeButton" %>
+<%= link_to 'Show Wheel', wheel_path(current_user), :class => "homeButton" %>
 
