--- a/app/views/wheels/new.html.erb
+++ b/app/views/wheels/new.html.erb
@@ -38,7 +38,7 @@
 	</div>
 	 
   	
-  	<%= f.button "Create My Wheel", :class => "homeButton" %>
-
+<!--   	<%= f.button "Create My Wheel", :class => "homeButton" %>
+ -->
 
 <% end %>
