--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -58,7 +58,7 @@ box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
     padding-top: 100px;
     opacity: 0.85;
     padding-top: 68px;
-    margin-bottom: 200px;
+    margin-bottom: 40px;
 }
 .wheel_back {
 width: 100%;
@@ -133,7 +133,7 @@ font-size: 12px;
     color: #767f84;
     margin-bottom: 20px;
 }
-#home_text {
+#home_text, #home_text a {
     font: 18px Arial, Helvetica, sans-serif;
     line-height: 20px;
     color: #767f84;
@@ -177,6 +177,7 @@ font-size: 12px;
     position:relative;
     top:1px;
 }
+/* Devise */
 #deviseButton {
     margin: 8px 0 20px 0;
     padding: 3px 53px 3px 53px;
@@ -188,6 +189,21 @@ font-size: 12px;
 }
 .field_with_errors{
     padding-top: -60px;
+}
+/* Goals Page */
+.goals_titletext {
+    font: 24px Arial, Helvetica, sans-serif;
+    line-height: 28px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.goal_button {
+    font: 64px Arial, Helvetica, sans-serif;
+    height: 30px;
+    width: 140px;
+    line-height: 28px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 /* Form */
 .question{
