--- a/app/views/wheels/show.html.erb
+++ b/app/views/wheels/show.html.erb
@@ -15,5 +15,7 @@
 <div id="sunburst">
 	<div class="wheel_back"></div>
 </div>
-<%= link_to 'save wheel', new_user_registration_path, :class => "homeButton" %>
+
+
+<% link_to 'Save My Wheel', new_user_registration_path, :class => "homeButton" %>
 <%= javascript_include_tag 'z-sanburst-d3' %>
