--- a/app/views/wheels/new.html.erb
+++ b/app/views/wheels/new.html.erb
@@ -37,8 +37,6 @@
 		<% end %>
 	</div>
 	 
-  	
-<!--   	<%= f.button "Create My Wheel", :class => "homeButton" %>
- -->
+  	<%= f.button "Create My Wheel", :class => "homeButton" %>
 
 <% end %>
